adjust layout & create initial position

--- a/index.html
+++ b/index.html
@@ -38,24 +38,22 @@
       </div>
       <div class="col" id="game-area">
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square1">
-            <div class="tiles">tile1</div>
-          </div>
-          <div class="solid-black squares" id="square2">square2</div>
-          <div class="solid-black squares" id="square3">square3</div>
-          <div class="solid-black squares" id="square4">square4</div>
+          <div class="solid-black squares" id="square1"></div>
+          <div class="solid-black squares" id="square2"></div>
+          <div class="solid-black squares" id="square3"></div>
+          <div class="solid-black squares" id="square4"></div>
         </div>
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square5">square5</div>
-          <div class="solid-black squares" id="square6">square6</div>
-          <div class="solid-black squares" id="square7">square7</div>
-          <div class="solid-black squares" id="square8">square8</div>
+          <div class="solid-black squares" id="square5"></div>
+          <div class="solid-black squares" id="square6"></div>
+          <div class="solid-black squares" id="square7"></div>
+          <div class="solid-black squares" id="square8"></div>
         </div>
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square9">square9</div>
-          <div class="solid-black squares" id="square10">square10</div>
-          <div class="solid-black squares" id="square11">square11</div>
-          <div class="solid-black squares" id="square12">square12</div>
+          <div class="solid-black squares" id="square9"></div>
+          <div class="solid-black squares" id="square10"></div>
+          <div class="solid-black squares" id="square11"></div>
+          <div class="solid-black squares" id="square12"></div>
         </div>
       </div>
       <div class="col-3 g-5" id="player-two">
