solve event listener bug & add capture system

--- a/index.html
+++ b/index.html
@@ -22,18 +22,12 @@
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve" id="player-one">
-          <div class="capture-grid col">
-            <div class="capture-tiles"></div>
-          </div>
-          <div class="capture-grid col">
-            <div class="capture-tiles"></div>
-          </div>
-          <div class="capture-grid col">
-            <div class="capture-tiles"></div>
-          </div>
+          <!-- <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
+          <div class="capture-grid col"></div>
+          <div class="capture-grid col"></div> -->
         </div>
       </div>
       <div class="col" id="game-area">
@@ -60,17 +54,13 @@
         <div class="player-name">Player Two</div>
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
-        <div class="capture-reserve">
-          <div class="capture-grid col">
-            <div class="capture-tiles"></div>
-          </div>
-          <div class="capture-grid col">
-            <div class="capture-tiles"></div>
-          </div>
+        <div class="capture-reserve" id="player-two">
+          <!-- <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
           <div class="capture-grid col"></div>
+          <div class="capture-grid col"></div> -->
         </div>
       </div>
     </div>
