create deselectPiece fn & recolor selectedPiece

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Twelve Piece Shogi/Twelve Janggi
       </div>
       <div class="col-3 g-5" id="player-one">
-        <div class="player-name">Player One</div>
+        <div class="player-name player-one-text">Player One</div>
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve" id="player-one">
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="col-3 g-5" id="player-two">
-        <div class="player-name">Player Two</div>
+        <div class="player-name player-two-text">Player Two</div>
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve" id="player-two">
