--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
         <div class="player-name player-one-text">Player One</div>
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
-        <div class="capture-reserve" id="player-one">
-          <!-- <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div> -->
-        </div>
+        <div class="capture-reserve"></div>
       </div>
       <div class="col" id="game-area">
         <div class="row cols-3 justify-content-center">
@@ -54,14 +47,7 @@
         <div class="player-name player-two-text">Player Two</div>
         <div class="your-turn">It's your turn now.</div>
         <div class="capture-reserve-text">You have captured:</div>
-        <div class="capture-reserve" id="player-two">
-          <!-- <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div>
-          <div class="capture-grid col"></div> -->
-        </div>
+        <div class="capture-reserve"></div>
       </div>
     </div>
     <script src="script.js"></script>
