add end game html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
     <div class="row g-3 gx-3" id="container">
       <div class="text-center col-12" id="game-title">
         Twelve Piece Shogi/Twelve Janggi
+        <br>
+        <h2></h2>
+        <button id="start">Start Game</brbutton>
       </div>
       <div class="col-3 g-5" id="player-one">
         <div class="player-name player-one-text">Player One</div>
-        <div class="your-turn">It's your turn now.</div>
+        <div class="your-turn">your turn.
+            <p id=counter></p>
+        </div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve"></div>
       </div>
@@ -45,7 +50,9 @@
       </div>
       <div class="col-3 g-5" id="player-two">
         <div class="player-name player-two-text">Player Two</div>
-        <div class="your-turn">It's your turn now.</div>
+        <div class="your-turn">your turn.
+            <p id=counter></p>
+        </div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve"></div>
       </div>
