clean html, change css

--- a/index.html
+++ b/index.html
@@ -10,48 +10,48 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Micro+5&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="row g-3 gx-3" id="container">
       <div class="text-center col-12" id="game-title">
-        Twelve Piece Shogi/Twelve Janggi
-        <br>
+        Twelve Janggi
         <h2></h2>
-        <button id="start">Start Game</brbutton>
+        <button id="start">start</brbutton>
       </div>
       <div class="col-3 g-5" id="player-one">
         <div class="player-name player-one-text">Player One</div>
-        <div class="your-turn">your turn.
-            <p id=counter></p>
+        <div class="your-turn">it is your turn to move.
         </div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve"></div>
       </div>
       <div class="col" id="game-area">
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square1"></div>
-          <div class="solid-black squares" id="square2"></div>
-          <div class="solid-black squares" id="square3"></div>
-          <div class="solid-black squares" id="square4"></div>
+          <div class="squares" id="square1"></div>
+          <div class="squares" id="square2"></div>
+          <div class="squares" id="square3"></div>
+          <div class="squares" id="square4"></div>
         </div>
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square5"></div>
-          <div class="solid-black squares" id="square6"></div>
-          <div class="solid-black squares" id="square7"></div>
-          <div class="solid-black squares" id="square8"></div>
+          <div class="squares" id="square5"></div>
+          <div class="squares" id="square6"></div>
+          <div class="squares" id="square7"></div>
+          <div class="squares" id="square8"></div>
         </div>
         <div class="row cols-3 justify-content-center">
-          <div class="solid-black squares" id="square9"></div>
-          <div class="solid-black squares" id="square10"></div>
-          <div class="solid-black squares" id="square11"></div>
-          <div class="solid-black squares" id="square12"></div>
+          <div class="squares" id="square9"></div>
+          <div class="squares" id="square10"></div>
+          <div class="squares" id="square11"></div>
+          <div class="squares" id="square12"></div>
         </div>
       </div>
       <div class="col-3 g-5" id="player-two">
         <div class="player-name player-two-text">Player Two</div>
-        <div class="your-turn">your turn.
-            <p id=counter></p>
+        <div class="your-turn">it is your turn to move.
         </div>
         <div class="capture-reserve-text">You have captured:</div>
         <div class="capture-reserve"></div>
